<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="6dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                android:orientation="vertical"
                android:weightSum="2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <TextView
                        android:id="@+id/tv_provinsi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="12dp"
                        android:text="@string/nama_provinsi"
                        android:textColor="@color/colorSubTitle"
                        app:fontFamily="@font/muli_bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:baselineAligned="false"
                        android:orientation="horizontal"
                        android:weightSum="3">

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="12dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/positif"
                                android:textColor="@color/colorSubTitle"
                                app:fontFamily="@font/muli_semibold" />

                            <TextView
                                android:id="@+id/tvProvPositif"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/value"
                                android:textColor="@color/colorPositif"
                                android:textSize="16sp"
                                app:fontFamily="@font/muli_bold" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="12dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/sembuh"
                                android:textColor="@color/colorSubTitle"
                                app:fontFamily="@font/muli_semibold" />

                            <TextView
                                android:id="@+id/tvProvSem"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/value"
                                android:textColor="@color/colorSembuh"
                                android:textSize="16sp"
                                app:fontFamily="@font/muli_bold" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginBottom="12dp"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/meninggal"
                                android:textColor="@color/colorSubTitle"
                                app:fontFamily="@font/muli_semibold" />

                            <TextView
                                android:id="@+id/tvProvMen"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/value"
                                android:textColor="@color/colorMeninggal"
                                android:textSize="16sp"
                                app:fontFamily="@font/muli_bold" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>


            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>